--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -13,8 +13,7 @@
  	\item Sensor de Giróscopio.
  	\item Se recomienda una cámara que permita grabar mínimo en 720p.  
  \end{itemize}
-También es necesario disponer de un MergeCube, es valido tanto en papel como el original.
-la versión de papel puede descargarse desde el siguiente enlace:\url{https://www.arvrinedu.com/post/merge-cube-printable}. 
+También es necesario disponer de un MergeCube. Para utilizar el Mergecube tenemos las opciones de comprar el original o construirse uno de papel. En ambos casos se han probado y son validados, la pega del de papel es su fragilidad y que dependiendo de la calidad de la impresión los resultados pueden variar.
 
 \section{Instalación}
 
@@ -44,7 +43,7 @@ En ``\textbf{Opciones}'', se puede configurar diferentes aspectos de la aplicaci
 
 \imagen{Anexos/appOpciones}{Imagen perteneciente a las opciones de la aplicación.}
 
-En la opción ``\textbf{Ayuda}'', se ofrece una guía/tutorial para poder resolver las dudas de los usuarios.
+En la opción ``\textbf{Ayuda}'', se ofrece una guía/tutorial en la que se explica los pasos básicos para el uso de la aplicación y poder resolver las dudas de los usuarios que se puedan encontrar.
 
 La cuarta y ultima Opción se trata de venta para ofrecer una breve información respecto a la aplicación. Se detalla el autor, lo tutores... 
 
@@ -57,18 +56,25 @@ En este modo, una vez que la cámara ya está activa, al enfocar el Mergecube, s
 
 \imagen{Anexos/appInterfaz}{Imagen perteneciente a la aplicación, con la interfaz desplegada.}
 
-En caso de tener seleccionado el modo de capturar target, la interfaz contará con dos elementos adicionales. El primero se trata de una barra de colores (rojo, amarillo, verde) que indica la calidad optima para que el objetivo enfocado sea un target. El segundo elemento será el disparador situado en la parte inferior centrar. Una vez que tengamos un objetivo que cumpla los requisitos de calidad, podremos presionar el disparador, de manera que el target se guardará temporalmente (al cerrar la aplicación o volver al menú los target se reinician). Sobre este target capturado aparecerá el modelo 3D correspondiente. Imagen---
+En caso de tener seleccionado el \textbf{modo de capturar target}~\ref{fig:Anexos/appOpciones}), la interfaz contará con dos elementos adicionales. El primero se trata de una barra de colores (rojo, amarillo, verde) que indica la calidad optima para que el objetivo enfocado sea un target. El segundo elemento será el disparador situado en la parte inferior centrar. Una vez que tengamos un objetivo que cumpla los requisitos de calidad, podremos presionar el disparador, de manera que el target se guardará temporalmente (al cerrar la aplicación o volver al menú los target se reinician). Cuando capturamos un target, el disparador y la barra de colores desaparecerán y saltará un mensaje preguntándonos si deseamos continuar con dicho target, si seleccionamos que no tendremos que volver a capturar un nuevo target. Sobre este target capturado aparecerá el modelo 3D correspondiente y ahora se podrá ``jugar` del mismo modo que se hacia con el Mergecube. 
 
-En la barra de herramientas contamos con dos elementos, una regadera y un paquete de abono. La primera al seleccionar nos saldrá en pantalla una regadera que automáticamente echará agua, el objetivo es mover el dispositvo hasta conseguir que el agua caiga en el mergecube. Cuando el agua colisione con el modelo proyectado en el mergecube, la barra de progreso subirá hasta completarse. 
-El segundo elemento, se trata de un bote de fertilizante, al pulsarse saldrá en la pantalla un botón que al ser presionado saldrá delante como si se hubiese lanzado contra el mergecube.
+En el modo jugable el número de target simultáneos esta limitado a uno, si se desea capturar un nuevo target se deberá indicar presionando el botón de la parte inferior izquierda, donde nos preguntará si deseamos continuar con el target, al presionar que no, volverá a salir las interfaz de captura para tomar un nuevo target. Al capturar un nuevo target sustituirá al anterior, pero podremos seguir con el mismo progreso del nivel que teníamos con el anterior target. 
+
+\imagen{Anexos/appCapturaTarget}{Imagen pertenecientes a la captura de un target.}
+
+En la barra de herramientas contamos con dos elementos, una regadera y un paquete de abono. La primera al seleccionar nos saldrá en pantalla una regadera que automáticamente echará agua, el objetivo es mover el dispositvo hasta conseguir que el agua caiga en el Mergecube. Cuando el agua colisione con el modelo proyectado en el Mergecube, la barra de progreso subirá hasta completarse. 
+El segundo elemento, se trata de un bote de fertilizante, al pulsarse saldrá en la pantalla un botón que al ser presionado saldrá delante como si se hubiese lanzado contra el Mergecube.
 Para completar una fase es necesario haber completado ambos casos anteriores descritos.
 
-Actualmente los modos de juego de las plantas constan de cuatro fases, cada una correspondiente con un estado de la planta (semilla, brote, planta1,planta final). Para completar una fase, es necesario, completar la barra de progreso de agua, y haber echado fertilizante.
+Actualmente los modos de juego de las plantas constan de cuatro fases, cada una correspondiente con un estado de la planta (semilla, brote, planta inicial, planta final). Para completar una fase, es necesario, completar la barra de progreso de agua, y haber echado fertilizante.
 
 Imagen
 
 
-En el modo de captura target se procederá ...
+En el modo de captura target, también cuenta con un modo de múltiples marcadores. En este modo no se puede ``jugar, pero es posible tener múltiples marcadores personalizados al mismo tiempo. Esto da la posibilidad de poder observar varios los modelos de la aplicación al mismo tiempo. Por defecto la aplicación esta limitada a cinco marcadores simultáneos como máximo, para asegurar el rendimiento. En caso de realizar una sexta captura borrara la primera.
+
+\imagenPeque{Anexos/appMultiTarget}{Imagen perteneciente al modo de múltiples marcadores simultáneos.}
+
 
 
  
